# trip-canvas

./: .env.example  AGENTICPAYMENTS.md  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  render.yaml
backend/: __init__.py  main.py  spike_agentic_payments.py  spike_booking.py  spike_e2e_planner.py  spike_hotel_base.py  spike_planner.py
backend/api/: __init__.py  schemas.py  streaming.py
backend/data/: hotel_base_output.json  places.json  planner_output.json
backend/tests/: test_agentic_hotel_payments.py  test_booking_payment.py  test_cache_contract.py  test_demo_cache_endpoint.py  test_hotel_base_contract.py  test_import_contract.py  test_itinerary_stage_events.py  test_planner_hotel_base.py  test_planner_stops.py
docs/: README.md  deployment.md
docs/reference/: agentic-payments.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-06-06-ai-native-mapbox-frontend.md  2026-06-06-ap2-human-in-the-loop.md  2026-06-06-map-selection-interaction.md  2026-06-07-codebase-cleanup.md
docs/superpowers/specs/: 2026-06-06-agentic-hotel-payments-design.md  2026-06-06-ai-native-mapbox-frontend-design.md  2026-06-06-ap2-backend-demo-mandate-design.md
frontend/: package.json
frontend/app/: globals.css
frontend/components/map/: TripMap.tsx
frontend/components/trip/: BottomPlaceRail.tsx  HotelBasePanel.tsx  LeftTripPanel.tsx  PlaceIntelPanel.tsx  RightTripPanel.tsx  SelectedPlaceCard.tsx  TripCanvasShell.tsx  TripGenerationShell.tsx
frontend/lib/trip/: agent-copy.test.mjs  agent-copy.ts  backend-types.ts  demo-cache.test.mjs  demo-cache.ts  env.ts  types.ts  (+8 more)
