[project]
name = "tripcanvas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.27",
    "openai>=2.37.0",
    "openai-agents>=0.17.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
    "x402[evm,httpx]>=2.12,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
